# copilotkit-crewai-ag-ui

./: .gitignore  agent.py  pyproject.toml  server.py
sample_agent/: server.py
src/app/: crew.py  main.py
src/app/tools/: weather_tool.py
src/sample_agent/: main.py
src/sample_agent/crews/sample_crew/config/: agents.yaml  tasks.yaml
src/sample_agent/tools/: custom_tool.py
